--- a/src/components/companySection/CompanySection.scss
+++ b/src/components/companySection/CompanySection.scss
@@ -1,1 +1,138 @@
-@import "./../../styles/mixins.scss"
+@import "./../../styles/mixins.scss";
+
+.company{
+    background: #110d34;
+    position: relative;
+    padding-block: 7rem;
+
+    h4{
+        color: #fff;
+        font-size: 28px;
+        font-weight: 500;
+        text-align: center;
+    }
+
+    h3,p{
+        color: #fff;
+    }
+
+    &__companies {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-inline:  auto;
+        width: fit-content;
+        margin-block: 3.5rem 10rem;
+        gap: 4rem;
+        flex-wrap: wrap;
+
+        img {
+            opacity: 0.5;
+        }
+    }
+
+    &__container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+        gap:16rem;
+        @include respond(tab-land){
+            gap: 6rem;
+        }
+        @include respond(tab-port){
+            grid-template-columns: 1fr;
+        }
+    }
+
+    &__left{
+        position: relative;
+        @include respond(tab-port){
+            width: 70%;
+            margin-inline: auto;
+        }
+    }
+
+    .img-1{
+        width: 100%;
+    }
+    .img-2{
+        position: absolute;
+        padding: 1rem;
+        background-color: #fff;
+        border-radius: 50%;
+        top:20%;
+        right:0;
+
+        img {
+            width: 2rem;
+            @include respond(phone){
+                width: 1.5rem;
+            }
+        }
+    }
+
+    .img-3 {
+        position: absolute;
+        padding: 1rem;
+            background-color: #fff;
+            border-radius: 0.3rem;
+            bottom: 12%;
+
+            img {
+                width: 2rem;
+                @include respond(phone){
+                    width: 1.5rem;
+                }
+            }
+        }
+
+        &__points-container {
+            display: flex;
+            flex-direction: column;
+            gap:2rem;
+            margin-top: 3rem;
+        }
+
+        &__point {
+            background-color: #fff;
+            display: flex;
+            align-items: center;
+            gap:1rem;
+            padding: 1rem;
+            border-radius: 2rem;
+        }
+
+        &__point-text{
+            font-size: 25px;
+            font-weight: 400;
+            color:#212123;
+        }
+
+        &__point-icon{
+            width: 35px;
+            height: 35px;
+            color: #fff;
+            background-image: url("./../../assets/bg-star.svg") ;
+            background-position: 50%;
+            background-repeat: no-repeat;
+            background-size: contain;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 14px;
+            font-weight: 500;
+        }
+
+        &__bg{
+            z-index: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0.05;
+            position: absolute;
+            top:0%;
+            bottom: 0%;
+            right: 0%;
+            left: 0%;
+            pointer-events: none;
+        }
+}
