Payment Section desk e mobile

--- a/src/components/featureSection/FeatureSection.scss
+++ b/src/components/featureSection/FeatureSection.scss
@@ -1,1 +1,76 @@
 @import "./../../styles/mixins.scss"; 
+
+.features {
+    padding-block: 6.5rem;
+
+    &__text{
+        text-align: center;
+        width: 50%;
+        margin-inline: auto;
+        margin-bottom: 3rem;
+        @include respond(tab-port) {
+            width: 70%;
+        }
+        @include respond(phone) {
+            width: 100%;
+        }
+    }
+
+    &__container{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        
+        @include respond(tab-port) {
+            grid-template-columns: 1fr;
+            gap: 1.3rem;
+            grid-template-rows: auto;
+        }
+    }
+
+    &__features{
+        text-align: center;
+        border-radius: 30px 30px 0 0;
+        padding: 5rem 1.2rem;
+        grid-area: span 1 / span 1 / span 1 / span 1;
+
+        img {
+            margin-inline: auto;
+            margin-bottom: 1.5rem;
+        }
+
+        h4{
+            margin-bottom: 0.8rem;
+            font-size: 1.6rem;
+            font-weight: 500;
+        }
+        @include respond(tab-port) {
+            padding: 1.3rem;
+            border-radius: 0.8rem;
+        }
+    }
+
+    &__features:nth-child(5){
+        border-radius: 0 0 30px 30px;
+        @include respond(tab-port) {
+            border-radius: 0.8rem;
+        }
+    }
+
+    .dark-feature{
+        background-color: #6f00eb;
+        color: #fff;
+    }
+    .white-feature{
+        @include respond(tab-port) {
+            background-color: #e5e2ff;
+        }
+    }
+
+    .dark-feature-title{
+        color: #fff;
+    }
+    .white-feature-title{
+        color: #6f00eb;
+    }
+}
