--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -2,6 +2,9 @@
 
 .hero{
     padding-block: 6rem;
+    @include respond(tab-port){
+        padding-block: 3rem 6rem;
+    }
 
     &__container {
         display: grid;
@@ -18,6 +21,13 @@
         align-items: center;
         gap: 1rem;
         margin-top: 3rem;
+        @include respond(phone){    
+            flex-direction: column;
+            a{
+                max-width: 205px;
+                width: 100%;
+            }
+        }
     }
 
     &__right {
